# estimation

./: .gitignore  CMakeLists.txt  README.md  assn1.m  bryson.m  namefig.m
MECH7710/hw4/: hw4_1.m  hw4_2.m  hw4_3.m
ekf/: ekf_.m  pendulum_ekf.m
include/: bryson.hpp  common.hpp  expm.hpp  invert_matrix.hpp
kf/: mbk_kf.m  mbk_kf_multisim.m  pendum_kf.m
matlab/: bryson.m
matlab/MECH7710/hw4/: hw4.m  hw4_1.m
matlab/ekf/: pendulum_ekf.m
matlab/kf/: mbk_kf.m
misc/: dare.hpp  dlqr.hpp
